# dinoai

./: .gitignore  CMakeLists.txt  README.md
libs/dino/include/: bot.hpp  dino.hpp  obstacle.hpp  structures.hpp
libs/dino/src/: bot.cpp  dino.cpp  obstacle.cpp
libs/nn/include/: MLP.hpp
libs/nn/src/: MLP.cpp
src/: play.cpp  pvc.cpp  train.cpp
